--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
+    "@types/react-redux": "^7.1.33",
     "@types/react-slick": "^0.23.13",
     "axios": "1.6.0",
     "openapi-typescript": "^6.7.5",
