--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "@types/react-redux": "^7.1.33",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.13",
     "axios": "1.6.0",
     "openapi-typescript": "^6.7.5",
@@ -22,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.2",
     "react-redux": "8.1.2",
+    "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
     "redux": "4.2.1",
     "redux-thunk": "2.4.2",
